# MeshLibrary

./: .gitignore  CMakeLists.txt
DemoApplication/: CMakeLists.txt
DemoApplication/src/: main.cpp
Mesh/: CMakeLists.txt
Mesh/include/: CommunicationClient.h  CommunicationMessage.h  CommunicationServer.h  IPAddress.h  Mesh.h  NetworkAccessPoint.h  NetworkInfo.h  NetworkStation.h  Node.h
Mesh/src/: Mesh.cpp  Node.cpp
